--- a/index.html
+++ b/index.html
@@ -51,13 +51,9 @@
     <!-- Data diri -->
     <section>
       <div class="container">
-        <div class="row justify-content-center text-center fs-5 mb-3 mt-1">
-          <div class="col-md-4 text-center">Data Diri</div>
-          <div class="col-md-4 text-center">Motivasi</div>
-          <div class="col-md-4 text-center">Tech Stack</div>
-        </div>
-        <div class="row justify-content-center text-center">
+        <div class="row justify-content-center text-center mb-3 mt-5">
           <div class="col-md-4 text-center">
+            <p class="fs-5">Data Diri</p>
             <p>Nama : Muhammad Arif Hidayat</p>
             <p>Nama Panggilan : Arif</p>
             <p>NIM : 20/463609/TK/51601</p>
@@ -65,12 +61,14 @@
             <p>Hobi : Ngoding, Ngegame, Tidur</p>
           </div>
           <div class="col-md-4 text-center">
+            <p class="fs-5">Motivasi</p>
             <p>
               Motivasi saya ingin bergabung dengan NWDC karena saya ingin meningkatkan Soft Skill dan Hard Skill, Menambah relasi, mendapatkan cuan. Karena dalam pandangan saya NWDC merupakan salah satu wadah yang sagant bagus untuk karir
               saya.
             </p>
           </div>
           <div class="col-md-4 text-center">
+            <p class="fs-5">Tech Stack</p>
             <p>Thec Stack yang dipelajari dan dikuasai :</p>
             <p>Visual Studio Code</p>
             <p>HTML</p>
